--- a/OrusFinancas.csproj
+++ b/OrusFinancas.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Pacote necessário para o servidor hospedar componentes interativos WebAssembly. -->
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0-preview.*" />
+    
+    <!-- Pacote base do WebAssembly. Adicionado para garantir que o compilador encontre todas as definições. -->
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0-preview.*" />
+  </ItemGroup>
+
 </Project>
